<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/firmwareUpdateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/firmware_update_diag_title"/>
        <TextView
            android:textSize="14sp"
            android:id="@+id/firmwareUpdateMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text=""/>
<!--        <CheckBox -->
<!--            android:textSize="14sp" -->
<!--            android:textStyle="bold" -->
<!--            android:id="@+id/dontAskFwUpdateCheckBox" -->
<!--            android:layout_width="match_parent" -->
<!--            android:layout_height="wrap_content" -->
<!--            android:layout_marginBottom="10dp" -->
<!--            android:text="Don&apos;t show again"/>-->
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textStyle="bold"
                android:id="@+id/startFwUpdateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firmware_update_diag_update"
                android:textAllCaps="false"
                android:layout_alignParentEnd="true"/>
            <Button android:id="@+id/skipFwUpdateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firmware_update_diag_later"
                android:layout_toStartOf="@+id/startFwUpdateButton"
                android:textAllCaps="false"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
