<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <Switch
        android:id="@+id/stream_type_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enable"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/profile_diag_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/profile_diag_margin"
        android:paddingRight="@dimen/profile_diag_margin">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:colorControlActivated="@color/colorPrimary">

            <org.gtdev.tridomhcapture.ui.ClickTextInputEditText
                android:id="@+id/profile_format"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_format" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:colorControlActivated="@color/colorPrimary">

            <org.gtdev.tridomhcapture.ui.ClickTextInputEditText
                android:id="@+id/profile_frame_rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_frame_rate" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/profile_diag_margin"
        android:paddingTop="@dimen/profile_diag_margin"
        android:paddingRight="@dimen/profile_diag_margin">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:colorControlActivated="@color/colorPrimary">

            <org.gtdev.tridomhcapture.ui.ClickTextInputEditText
                android:id="@+id/profile_resolution"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_resolution" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5.5" />

    </LinearLayout>

</LinearLayout>